--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
 	<meta charset='UTF-8' />
-	<link rel='icon' type='image/svg+xml' href='/vite.svg' />
+	<link rel='icon' type='image/svg+xml' href='./public/vite.svg' />
 	<meta name='viewport' content='width=device-width, initial-scale=1.0' />
 	<!-- CSS only -->
 	<link href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css' rel='stylesheet'
@@ -11,6 +11,6 @@
 </head>
 <body>
 <div id='root'></div>
-<script type='module' src='/src/main.jsx'></script>
+<script type='module' src='./src/main.jsx'></script>
 </body>
 </html>
